# cloudSQL

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  test_lexer.c
.github/workflows/: ci.yml
docs/phases/: PHASE_4_CONSENSUS.md  PHASE_5_OPTIMIZATION.md  PHASE_6_DISTRIBUTED_JOIN.md  PHASE_7_REPLICATION_HA.md  PHASE_8_ANALYTICS.md  README.md
include/catalog/: catalog.h  catalog.hpp
include/common/: cluster_manager.hpp  config.h  config.hpp  types.h  value.hpp
include/distributed/: distributed_executor.hpp  raft_node.hpp  raft_types.hpp  shard_manager.hpp
include/executor/: executor.h  operator.hpp  query_executor.hpp  types.hpp  vectorized_operator.hpp
include/network/: rpc_client.hpp  rpc_message.hpp  rpc_server.hpp  server.h  server.hpp
include/parser/: ast.h  expression.hpp  lexer.hpp  parser.hpp  statement.hpp  token.hpp
include/recovery/: log_manager.hpp  log_record.hpp
include/storage/: btree_index.hpp  buffer_pool_manager.hpp  columnar_table.hpp  heap_table.hpp  lru_replacer.hpp  manager.h  page.hpp  storage_manager.hpp
include/transaction/: lock_manager.hpp  transaction.hpp  transaction_manager.hpp  wal.h
plans/: CPP_MIGRATION_PLAN.md  architecture.md
src/: main.c  main.cpp
src/catalog/: catalog.cpp
src/common/: config.cpp
src/distributed/: distributed_executor.cpp  raft_group.cpp  raft_manager.cpp  raft_node.cpp
src/executor/: executor.c  operator.cpp  query_executor.cpp
src/network/: rpc_client.cpp  rpc_server.cpp  server.cpp
src/parser/: ast.c  expression.cpp  lexer.c  lexer.cpp  parser.cpp  statement.cpp
src/recovery/: log_manager.cpp  log_record.cpp
src/storage/: btree_index.cpp  buffer_pool_manager.cpp  columnar_table.cpp  heap_table.cpp  lru_replacer.cpp  manager.c  storage_manager.cpp
src/transaction/: lock_manager.cpp  transaction_manager.cpp
tests/: analytics_tests.cpp  buffer_pool_tests.cpp  catalog_coverage_tests.cpp  cloudSQL_tests.cpp  distributed_tests.cpp  distributed_txn_tests.cpp  lock_manager_tests.cpp  multi_raft_tests.cpp  raft_simulation_tests.cpp  raft_tests.cpp  recovery_manager_tests.cpp  recovery_tests.cpp  run_dist_test.sh  run_test.sh  server_tests.cpp  statement_tests.cpp  test_utils.hpp  transaction_coverage_tests.cpp  transaction_manager_tests.cpp  utils_coverage_tests.cpp
tests/e2e/: e2e_test.py
tests/logic/: aggregates.slt  basic.slt  expressions.slt  indexes.slt  joins.slt  limit_offset.slt  slt_runner.py
